fin page question simple

--- a/html/question_simple.html
+++ b/html/question_simple.html
@@ -46,13 +46,15 @@
   	<div id="footer">
   	
 		<div id=buttons>
-			<input type="button" name="Valider" value="Valider" id="b1">
+			<input type="button" name="Valider" value="Valider" id="b1" onclick="valider_reponse()">
 			<input type="button" name="Voir explication" value="Voir explication" id="b2">
 		</div>
 		<img id="logo_agogy" src="../pictures/agogy_logo.PNG" alt="iconeLogo"/>
-		<label>Etape suivante</label>
-		<br><br>
-		<img id="img_arrondie" src="../pictures/flèche.PNG" alt="fleche"/>
+		<div id="suivant">
+			<label >Etape suivante</label>
+			<br><br>
+			<img id="img_arrondie" src="../pictures/flèche.PNG" alt="fleche"/>
+		</div>
   	</div>
  </body>
 
