--- a/html/questions_multiples.html
+++ b/html/questions_multiples.html
@@ -15,21 +15,15 @@
 
   <body>  
     <div id="header">
-      <!--<img id="img_arrondie" src="../pictures/q_agogy.PNG" alt="icone"/>-->
+    
       <img  id="titre" src="../pictures/titre_questionnaire_2.PNG" alt="titre"/>
 
-        <!-- <div class="progress-circle thin grey" data-value="60">
-        <div class="progress-masque">
-           <div class="progress-barre"></div>
-           <div class="progress-sup50"></div>
-        </div>
-    </div> -->
     <div class="progress-circle" data-value="60"></div>
 
     </div>
 
     <div id="contenu">
-      <img id="img_arrondie" src="../pictures/un.PNG" alt="iconeUn"/>
+      <img id="img_arrondie" src="../pictures/deux.PNG" alt="iconeUn"/>
       <p>&nbsp De quelle couleur peut être un feu  ?</p>
 
       <ul>
@@ -57,7 +51,7 @@
     <div id="suivant">
       <label >Etape suivante</label>
       <br><br>
-      <a href="./questions_multiples.html"><img id="img_arrondie" src="../pictures/flèche.PNG" alt="fleche" href="../questions_multiples.html"/></a>
+      <a href="./mots_relies.html"><img id="img_arrondie" src="../pictures/flèche.PNG" alt="fleche" href="../questions_multiples.html"/></a>
     </div>
     </div>
  </body>
