suite mots relies

--- a/html/question_simple.html
+++ b/html/question_simple.html
@@ -25,7 +25,7 @@
   		<img id="img_arrondie" src="../pictures/un.PNG" alt="iconeUn"/>
   		<p>&nbsp Que faut-il faire pour éteindre un feu ?</p>
 
-  		<ul>
+  		<ul id="questions">
   			<li id="un"> <img id="img_arrondie" src="../pictures/ungris.PNG" alt="iconeUngris" />Jeter de la vodka</li>
   			</br>
   			<li id="deux"> <img id="img_arrondie" src="../pictures/deuxgris.PNG" alt="iconeDeuxgris"/>Souffler</li>
