--- a/html/questions_multiples.html
+++ b/html/questions_multiples.html
@@ -26,7 +26,7 @@
       <img id="img_arrondie" src="../pictures/deux.PNG" alt="iconeUn"/>
       <p>&nbsp De quelle couleur peut être un feu  ?</p>
 
-      <ul>
+      <ul id="questions">
         <li id="un"> <img id="img_arrondie" src="../pictures/ungris.PNG" alt="iconeUngris" />Orange</li>
         </br>
         <li id="deux"> <img id="img_arrondie" src="../pictures/deuxgris.PNG" alt="iconeDeuxgris"/>Bleu</li>
