insertion questionnaire module

--- a/html/question_simple.html
+++ b/html/question_simple.html
@@ -45,7 +45,7 @@
 		</div>
 		<img id="logo_agogy" src="../pictures/agogy_logo_2.PNG" alt="iconeLogo"/>
 		<div id="suivant">
-			<label >Etape suivante</label>
+			<label id="etape_suivante" >Etape suivante</label>
 			<br><br>
 			<a href="./questions_multiples.html"><img id="img_arrondie" src="../pictures/flèche.PNG" alt="fleche" href="../questions_multiples.html"/></a>
 		</div>
