--- a/html/questions_multiples.html
+++ b/html/questions_multiples.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="../css/style.css" type="text/css" title="style1">
     <script
   src="https://code.jquery.com/jquery-3.4.1.js"
-  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
-  crossorigin="anonymous"></script> 
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="></script> 
   
  
   </head>
